creation html css et devut de la logique du jeu en js

--- a/index.html
+++ b/index.html
@@ -5,31 +5,30 @@
     <meta charset="UTF-8">
     <title>Morpion</title>
     <script type="text/javascript" src="script.js"></script>
+    <link rel="stylesheet" href="style.css"/>
 </head>
 
 <body>
-    <div class="main">
-        <table>
-            <tr>
-                <td id="case0"></td>
-                <td id="case1"></td>
-                <td id="case2"></td>
-            </tr>
-
-            <tr>
-                <td id="case3"></td>
-                <td id="case4"></td>
-                <td id="case5"></td>
-            </tr>
-
-            <tr>
-                <td id="case6"></td>
-                <td id="case7"></td>
-                <td id="case8"></td>
-            </tr>
-        </table>
-
+   
+  <h1>Le jeu du morpion</h1>
+  <div id="Jeu">
+    <div>
+      <button id="case0"></button>
+      <button id="case1"></button>
+      <button id="case2"></button>
     </div>
+    <div>
+      <button id="case3"></button>
+      <button id="case4"></button>
+      <button id="case5"></button>
+    </div>
+    <div>
+      <button id="case6"></button>
+      <button id="case7"></button>
+      <button id="case8"></button>
+    </div>
+    <div id="StatutJeu"></div>
+  </div> 
 
 </body>
 
