--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <button id="case7"></button>
       <button id="case8"></button>
     </div>
-    <div id="StatutJeu"></div>
+    <div id="statutJeu"></div>
   </div> 
 
 </body>
