Ajout de la fonction de victoire

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <button id="case7"></button>
       <button id="case8"></button>
     </div>
-    <div id="statutJeu"></div>
+    <div id="statutJeu">Le joueur 1 commence</div>
   </div> 
 
 </body>
