Fin du script global du jeu et renommage des id dans le html

--- a/index.html
+++ b/index.html
@@ -13,21 +13,21 @@
   <h1>Le jeu du morpion</h1>
   <div id="Jeu">
     <div>
-      <button id="case0"></button>
-      <button id="case1"></button>
-      <button id="case2"></button>
+      <button id="0"></button>
+      <button id="1"></button>
+      <button id="2"></button>
     </div>
     <div>
-      <button id="case3"></button>
-      <button id="case4"></button>
-      <button id="case5"></button>
+      <button id="3"></button>
+      <button id="4"></button>
+      <button id="5"></button>
     </div>
     <div>
-      <button id="case6"></button>
-      <button id="case7"></button>
-      <button id="case8"></button>
+      <button id="6"></button>
+      <button id="7"></button>
+      <button id="8"></button>
     </div>
-    <div id="statutJeu">Le joueur 1 commence</div>
+    <div id="statutJeu" >Le joueur 1 commence</div>
   </div> 
 
 </body>
