bouton reset game

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
       <button id="8"></button>
     </div>
     <div id="statutJeu" >Le joueur 1 commence</div>
+    <button id="reset" onClick="window.location.reload()">Reset Game</button>
   </div> 
 
 </body>
